<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/note_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/select_background_note"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Bold.Body4"
        android:textColor="@color/base_black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/video_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/select_background_video_duration"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Caption"
        android:textColor="@color/base_black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/photoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="8dp"
        android:text="@string/select_background_photo"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Body1"
        android:textColor="@color/base_black" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/videoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="8dp"
        android:text="@string/select_background_video"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Body1"
        android:textColor="@color/base_black" />

</LinearLayout>