<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bgrem.presentation.welcome.WelcomeFragment">

    <com.bgrem.presentation.common.view.AppNameWithLogoView
        android:id="@+id/welcomeLogoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeInfoImage" />

    <ImageView
        android:id="@+id/welcomeCollageImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_collage"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeLogoView"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcomeInfoImage"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:icon="@drawable/ic_info"
        app:iconGravity="end"
        app:iconTint="@color/accent_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:text="@string/welcome_title"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Body1"
        app:layout_constraintBottom_toTopOf="@+id/welcomeStartButton"
        tools:layout_editor_absoluteX="163dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/welcomeStartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="9dp"
        android:text="@string/welcome_get_started"
        app:layout_constraintBottom_toTopOf="@+id/welcomeCaptionText"
        tools:layout_editor_absoluteX="46dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcomeCaptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textAppearance="@style/Text.Caption"
        android:textColorHighlight="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:text="@string/welcome_caption" />

</androidx.constraintlayout.widget.ConstraintLayout>